--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -177,7 +177,7 @@ import Layout from '../layouts/Layout.astro';
     </p>
 
     <p style="margin: 0.5rem 0;">
-      Email: <a href="mailto:YOUR@email.com" style="color:#fff; text-decoration: underline;">YOUR@email.com</a>
+      Email: <a href="mailto:boiholidayh@gmail.com" style="color:#fff; text-decoration: underline;">boiholidayh@gmail.com</a>
       <br />
       Phone: <a href="tel:+64211394760" style="color:#fff; text-decoration: underline;">+64 21 139 4760</a>
     </p>
