--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from '../components/logo2.jpg';
+import Logo from '../public/images/logo2.jpg';
 
 const navItems = [
     { linkText: 'Home', href: '/' },
