--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,11 +3,9 @@ import Logo from '../images/logo2.jpg';
 
 const navItems = [
     { linkText: 'Home', href: '/' },
-    { linkText: 'Revalidation', href: '/revalidation' },
-    { linkText: 'Image CDN', href: '/image-cdn' },
-    { linkText: 'Edge Function', href: '/edge' },
-    { linkText: 'Blobs', href: '/blobs' }
-];
+    { linkText: 'Services', href: '/services' },
+    { linkText: 'Enquire', href: '/enquire' },
+   ];
 ---
 
 <nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
