--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,28 +1,32 @@
 ---
-import Logo from '../images/logo2.jpg';
-
+---
 const navItems = [
-    { linkText: 'Home', href: '/' },
-    { linkText: 'Services', href: '/services' },
-    { linkText: 'Enquire', href: '/enquire' },
-   ];
+  { linkText: 'Home', href: '/' },
+  { linkText: 'Services', href: '#services' },
+  { linkText: 'Enquire', href: '#enquire' },
+];
 ---
 
 <nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
-    <a href="/">
-        <Logo />
-    </a>
-    {
-        !!navItems?.length && (
-            <ul class="flex flex-wrap gap-x-4 gap-y-1">
-                {navItems.map((item) => (
-                    <li>
-                        <a href={item.href} class="inline-block px-1.5 py-1 sm:px-3 sm:py-2">
-                            {item.linkText}
-                        </a>
-                    </li>
-                ))}
-            </ul>
-        )
-    }
+  <a href="/" aria-label="Home">
+    <img
+      src="/logo2.jpg"
+      alt="Bay of Islands Holiday Home Support"
+      style="height: 42px;"
+    />
+  </a>
+
+  <ul class="flex flex-wrap gap-x-4 gap-y-1">
+    {navItems.map((item) => (
+      <li>
+        <a
+          href={item.href}
+          class="inline-block px-1.5 py-1 sm:px-3 sm:py-2"
+        >
+          {item.linkText}
+        </a>
+      </li>
+    ))}
+  </ul>
 </nav>
+
