--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,8 @@
----
 const navItems = [
   { linkText: 'Home', href: '/' },
-  { linkText: 'Services', href: '#services' },
-  { linkText: 'Enquire', href: '#enquire' },
+  { linkText: 'Services', href: '/services' }, // changed
+  { linkText: 'Enquire', href: '/enquire' },
 ];
----
 
 <nav class="flex flex-wrap items-center gap-4 pt-6 pb-16 sm:pt-12 sm:pb-24">
   <a href="/" aria-label="Home">
